--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -106,7 +106,8 @@
 
 
         </div>
-        <div class="form-group">
+        <div class="col-md-6">
+          <div class="form-group">
             <b>Contributors: </b><br />
             <span>| Allison Sadin: <input type="checkbox" name="hasAllisonSadin" value="true">
             <br>
@@ -144,6 +145,10 @@
             <br>
             <span>| Jeffrey Kim: <input type="checkbox" name="hasJeffreyKim" value="true">
             <br>
+          </div>
+        </div>
+            <div class="col-md-6">
+            <div class="form-group">
             <span>| JohnNils Olson: <input type="checkbox" name="hasJohnNilsOlson" value="true">
             <br>
             <span>| Joseph Pearce: <input type="checkbox" name="hasJosephPearce" value="true">
@@ -183,6 +188,7 @@
             <span>| Tyson Lackey: <input type="checkbox" name="hasTysonLackey" value="true">    
           </div>
         </div>
+      </div>
 
       </div>
       <div class="row">
